less/bootstrap-theme/buttons.less
//
// Buttons
// --------------------------------------------------

// Button flat
.btn {
  white-space: pre-wrap;
  word-wrap: break-word;
  .button-variant-flat();

  .input-group-btn & {
    white-space: normal;
  }
}

.btn-link {
  .border-top-radius(@btn-border-radius-base);
  .border-bottom-radius(@btn-border-radius-base);

  &.btn-lg {
    .border-top-radius(@btn-border-radius-large);
    .border-bottom-radius(@btn-border-radius-large);
  }

  &.btn-sm {
    .border-top-radius(@btn-border-radius-small);
    .border-bottom-radius(@btn-border-radius-small);
  }

  &.btn-xs {
    .border-top-radius(@btn-border-radius-small);
    .border-bottom-radius(@btn-border-radius-small);
  }
}

.btn-block + .btn-block {
  margin-top: 10px;
}

